feat: Add rest server for server administration service
